# pgqueuer

./: .gitignore  .readthedocs.yaml  AGENTS.md  BUILD_RUST_EXTENSION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PERFORMANCE_ROADMAP.md  README.md  RELEASE.md  bar.py  bar.sql  build_rust_extension.sh  codex_postgres.sh  docker-compose.yml  foo.py  foo.sql  i.py  mkdocs.yml  prometheus-metrics-service.md  pyproject.toml  setup.cfg  setup.py
.claude/: settings.local.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/docker-cache/: action.yml
.github/workflows/: ci.yml  discord-release-msg.yml  django-example.yml  docs.yml  linting.yml  pr-title.yml  release.yml
QuickStart Tutorial/: FAQ.md  README.md  TROUBLESHOOTING.md  advanced_features.md  best_practices.md  consumer.md  deployment.md  django_integration.md  docker-compose.yml  fastapi_integration.md  monitoring.md  producer.md  quickstart.md  testing.md
docker/runner/: Dockerfile
docs/: CNAME  architecture.md  benchmark.md  celery-comparison.md  cli.rst  conf.py  dashboard.md  database_initialization.md  development.md  driver.md  failed_jobs.md  heartbeat.md  in-memory.md  index.md  index.rst  introduction.md  limits.md  migration-guide.md  migrations.md  pgqueuer.md  ports-and-adapters.md  postgres-driver-troubleshooting.md  postgres-tuning.md  postgrest.md  prometheus-metrics-service.md  queuemanager.md  rps.md  runner.md  scheduler.md  sentry.md  tracing.md
docs/comparisons/: benchmarks.md  celery-comparison.md
docs/development/: benchmark.md  celery-comparison.md  development.md  troubleshooting.md
docs/getting-started/: core-concepts.md  installation.md  quickstart.md  upgrading.md  zero-downtime-bigint-id.md
docs/guides/: bigint-id-migration.md  completion-tracking.md  concurrency-control.md  custom-executors.md  deferred-execution.md  deployment.md  heartbeat.md  hold-failed-jobs.md  job-cancellation.md  performance-tuning.md  programmatic-run.md  rate-limiting.md  reliability.md  retry.md  scheduling.md  shared-resources.md
docs/images/: generate_architecture_diagram.py
docs/integrations/: mcp-server.md  postgrest.md  prometheus.md  tracing.md  web-dashboard.md
docs/reference/: architecture.md  cli.md  database-permissions.md  database-setup.md  drivers.md  in-memory.md  ports-and-adapters.md  skip-locked.md
docs/stylesheets/: extra.css
examples/: consumer.py  context_injection.py  django_usage.py  enqueue_test_jobs.py  failed_jobs_example.py  fastapi_usage.py  flask_sync_usage.py  postgrest_setup.py  producer.py  producer.sql  scheduler.py
examples/callable_factory/: README.md  consumer.py  producer.py
examples/django_example/: Dockerfile  README.md  docker-compose.yml  requirements.txt
examples/django_example/myapp/: admin.py  models.py  views.py  worker.py
examples/django_example/myproject/: settings.py  urls.py
pgqueuer/: __init__.py  __main__.py  _core.pyi  _version.py  applications.py  buffers.py  cache.py  cli.py  completion.py  core_rs.pyi  db.py  errors.py  executors.py  factories.py  heartbeat.py  helpers.py  listeners.py  logconfig.py  metrics.py  migrations.py  models.py  qb.py  qm.py  queries.py  query_helpers.py  retries.py  scheduler.py  shutdown.py  sm.py  supervisor.py  telemetry.py  tm.py  tracing.py  types.py  wait_for_completion.py  web.py
pgqueuer/_core/: Cargo.toml
pgqueuer/_core/src/: entrypoint_queue.rs  lib.rs  types.rs
pgqueuer/adapters/: connections.py
pgqueuer/adapters/cli/: cli.py  factories.py  sql_cmd.py  supervisor.py
pgqueuer/adapters/drivers/: __init__.py  asyncpg.py  psycopg.py
pgqueuer/adapters/in_memory/: __init__.py  driver.py  repository.py
pgqueuer/adapters/inmemory/: __init__.py  driver.py  queries.py
pgqueuer/core/: applications.py  buffers.py  cache.py  completion.py  executors.py  heartbeat.py  helpers.py  insights.py  listeners.py  logconfig.py  qm.py  retries.py  sm.py  tm.py
pgqueuer/core_rs/: Cargo.toml
pgqueuer/domain/: errors.py  models.py  settings.py  types.py
pgqueuer/integrations/: sentry.py
pgqueuer/metrics/: fastapi.py  flask.py  prometheus.py
pgqueuer/ports/: __init__.py  driver.py  repository.py  tracing.py
recipes/: fastapi_recipe.py
src/PgQueuer/: __main__.py  _version.py  buffers.py  cli.py  db.py  helpers.py  listeners.py  logconfig.py  models.py  qm.py  queries.py  supervisor.py  tm.py
test/: conftest.py  helpers.py  test_benchmark.py  test_benchmark_grace_period.py  test_benchmark_tools.py  test_buffers.py  test_cache.py  test_cancellation.py  test_cli_autovac.py  test_cli_queue.py  test_cli_run_and_install.py  test_cli_run_envvar.py  test_cli_sql.py  test_cli_web.py  test_completion.py  test_concurrency_limit.py  test_connections.py  test_context_resource.py  test_drivers.py  test_durability.py  test_execute_after.py  test_executors.py  test_factories.py  test_factory_supervisor_chain.py  test_failed_jobs.py  test_future_guards.py  test_health_check_cancellation.py  test_heartbeat.py  test_helpers.py  test_hold_failed.py  test_in_memory_repository.py  test_inmemory.py  test_inmemory_integration.py  test_insights_service.py  test_issue_536_minimal.py  test_listener_healthy_contract.py  test_listeners.py  test_manual_retry.py  test_mcp_server.py  test_metrics.py  (+51 more)
test/db/: Dockerfile  init_db.sh
test/integration/: test_fastapi.py  test_flask_sync.py  test_tenacity_backoff.py
test/windows/: test_cli_event_loop_policy.py  test_psycopg_async_loop.py  test_shutdown.py
tools/: BENCHMARK_TRIGGER.md  append_benchmarks.py  benchmark.py  benchmark_data.py  benchmark_inmemory.py  benchmark_notefication.py  benchmark_trigger_performance.py  compare_rps.py  compare_rps_main.py  concurrency_probe.py  consumer.py  dequeue_benchmark.py  ex.py  fetch_history.py  listen_notify.py  plot_package_stats.py  producer.py  prometheus.py  pyproject.toml
tools/prometheus/: Dockerfile  docker-compose.yml  prometheus.py
tools/web/: Dockerfile  docker-compose.yml
(+48 files in other folders)
