[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "pgqueuer/core_rs/Cargo.toml"
python-packages = ["pgqueuer"]
module-name = "pgqueuer.core_rs"

[tool.setuptools_scm]
version_scheme= "only-version"
local_scheme= "no-local-version"
write_to= "pgqueuer/_version.py"


[project]
name = "pgqueuer"
description = "Pgqueuer is a Python library leveraging PostgreSQL for efficient job queuing."
authors = [{name = "JeyBee"}]
license = {text = "MIT License"}
dynamic = ["version"]
requires-python = ">=3.10"
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: System :: Distributed Computing"
]

dependencies = [
    "anyio>=4.0",
    "croniter>=5.0.1",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.0.0",
    "tabulate>=0.9.0",
    "typer>=0.15.1",
    "uvloop>=0.22.0; sys_platform != 'win32'",
    "async-timeout>=5.0.1",
]

[project.urls]
Documentation = "https://github.com/janbjorge/pgqueuer/wiki"
Homepage = "https://github.com/janbjorge/pgqueuer/"
Issues = "https://github.com/janbjorge/pgqueuer/issues"
Repository = "https://github.com/janbjorge/pgqueuer/"

[project.scripts]
pgq = "pgqueuer.__main__:main"

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.30.0"]
psycopg = ["psycopg>=3.2.0"]
logfire = ["logfire>=3.0.0"]
sentry = ["sentry-sdk>=2.0.0"]
fastapi = ["fastapi>=0.100.0"]
dev = [
    "async-timeout>=4.0.3",
    "asyncpg",
    "asyncpg-stubs",
    "fastapi",
    "flask",
    "httpx",
    "icecream>=2.1.3",
    "mypy",
    "mypy-extensions",
    "psycopg>=3.2.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "ruff",
    "tqdm",
    "types-croniter",
    "types-tabulate",
    "uvicorn",
    "time-machine>=2.16.0",
    "testcontainers>=4.12.0",
    "import-linter>=2.0",
]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-mermaid"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "C",
    "E",
    "F",
    "I",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "SIM",
    "W",
    "C90"
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
relative-imports-order = "furthest-to-closest"
force-single-line = false

[tool.mypy]
disallow_untyped_defs = true
exclude = "^(build)"
extra_checks = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = "20"
timeout_func_only = true
addopts = "--durations=15"

# ---------------------------------------------------------------------------
# Import-linter: enforce hexagonal architecture boundaries
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["pgqueuer"]

[[tool.importlinter.contracts]]
name = "Domain must not import from adapters or core"
type = "forbidden"
source_modules = ["pgqueuer.domain"]
forbidden_modules = ["pgqueuer.adapters", "pgqueuer.core"]

[[tool.importlinter.contracts]]
name = "Ports must not import from adapters or core"
type = "forbidden"
source_modules = ["pgqueuer.ports"]
forbidden_modules = ["pgqueuer.adapters", "pgqueuer.core"]
ignore_imports = [
    # ports/driver.py needs TaskManager from core for the protocol definition
    "pgqueuer.ports.driver -> pgqueuer.core.tm",
    # TYPE_CHECKING import for protocol type hint
    "pgqueuer.ports.repository -> pgqueuer.adapters.persistence.queries",
]

[[tool.importlinter.contracts]]
name = "Core must not import from adapters"
type = "forbidden"
source_modules = ["pgqueuer.core"]
forbidden_modules = ["pgqueuer.adapters"]
ignore_imports = [
    # These core modules legitimately depend on adapter implementations
    # during the migration period. Future work will further decouple these.
    "pgqueuer.core.qm -> pgqueuer.adapters.persistence.qb",
    "pgqueuer.core.qm -> pgqueuer.adapters.persistence.queries",
    "pgqueuer.core.qm -> pgqueuer.adapters.tracing",
    "pgqueuer.core.sm -> pgqueuer.adapters.persistence.queries",
    "pgqueuer.core.completion -> pgqueuer.adapters.persistence.qb",
    "pgqueuer.core.completion -> pgqueuer.adapters.persistence.queries",
    "pgqueuer.core.applications -> pgqueuer.adapters.drivers.asyncpg",
    "pgqueuer.core.applications -> pgqueuer.adapters.drivers.psycopg",
    "pgqueuer.core.applications -> pgqueuer.adapters.persistence.qb",
]
